Temporary balance endpoint
